--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -117,6 +117,21 @@ header.top {
   }
 }
 
+.acs-aem-bundles {
+  background-color: white;
+}
+
+.img-wrapper {
+  margin: 2em auto;
+  max-width: 900px;
+  text-align: center;
+}
+
+img.framed {
+  border: solid 10px white;
+  .shadow();
+}
+
 #projects {
   a {
     color: black;
