--- a/_includes/acs-aem-tools/slides/intro.html
+++ b/_includes/acs-aem-tools/slides/intro.html
@@ -10,7 +10,7 @@
                     <p class="lead">Your job is hard enough</p>
                 </div>
                 
-                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/ACS/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip" class="action-btn">Download the latest release</a>
+                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/acs-aem-tools-{{ site.data.acs-aem-tools.version }}/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip" class="action-btn">Download the latest release</a>
             </div>
          
         </div>
