--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -2,6 +2,7 @@
 @import "icons.less";
 @import "home.less";
 @import "jumbotron.less";
+@import "feature-filters.less";
 @import "feature-cards.less";
 @import "feature-docs.less";
 
