--- a/lib/shared/feature-cards.less
+++ b/lib/shared/feature-cards.less
@@ -15,13 +15,18 @@
     text-align: center;
     position: relative;
 
-    img {
-      border-color: white;
-      border-style: solid;
-      border-width: 1em;
+    .feature-image-wrapper {
+      display: inline-block;
+      margin: 0 auto;
 
-      .rounded-corners(0px);
-      .shadow();
+      img {
+        border-color: white;
+        border-style: solid;
+        border-width: 1em;
+
+        .rounded-corners(0px);
+        .shadow();
+      }
     }
 
     h3 {
