Disqus commenting on ACS AEM Commons feature pages

--- a/_layouts/acs-aem-commons_feature.html
+++ b/_layouts/acs-aem-commons_feature.html
@@ -20,6 +20,8 @@ layout: acs-aem-commons_default
             </div>
 
             {{ content }}
+
+            {% include acs-aem-commons/comments.html %}
         </section>
     </div>
 </div>
