--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -166,3 +166,10 @@ ul.show-more-list {
     display: none;
   }
 }
+
+.comment-header {
+  border-top: solid 1px #eee;
+  color: #999;
+  margin: 3em 0 1em 0;
+  padding-top: .5em;
+}
