--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -74,6 +74,12 @@
   }
 }
 
+.section {
+  padding: 0 2em 1em 2em;
+  border: dotted 5px #f0f0f0;
+  margin-bottom: 2em;  
+}
+
 /* Inline Code */
 code {
   .code;
