Added Download button to the jumbotron

--- a/_includes/acs-aem-commons/slides/intro.html
+++ b/_includes/acs-aem-commons/slides/intro.html
@@ -9,7 +9,10 @@
                     <h1>ACS AEM Commons</h1>
                     <p class="lead">The wheel doesn't need reinventing</p>
                 </div>
+                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
+                    class="action-btn">Download the CQ Package</a>
                 <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
+            
             </div>
          
         </div>
