ACS AEM Commons 1.9.0 - Added Content Migration feature filter and removed 1.8.0 new/updated tags

--- a/_includes/shared/feature-filters.html
+++ b/_includes/shared/feature-filters.html
@@ -34,6 +34,10 @@
 			<a data-filter-tags="authoring" href="#">Authoring</a>
 			<p>Features aimed at enhancing the Authoring experience</p>
 		</li>
+		<li>
+			<a data-filter-tags="content-migration" href="#">Content Migration</a>
+			<p>Features to help with content migration</p>
+		</li>		
 	</ul>
 	<h3 class="filter-description"></h3>
 </div>
