Beta feature support

--- a/lib/shared/feature-cards.less
+++ b/lib/shared/feature-cards.less
@@ -62,5 +62,10 @@
       background-image: url('/assets/shared/images/updated-banner.png');
       .banner;
     }
+	
+    .beta {
+      background-image: url('/assets/shared/images/beta-banner.png');
+      .banner;
+    }
   }
 }
