--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -17,7 +17,7 @@
     }
 
     .new {
-      background-color:red;
+      background-color: red;
       .badge
     }
 
@@ -25,7 +25,11 @@
       background-color: #308BF6;
       .badge
     }
-
+	
+    .beta {
+      background-color: #76107E;
+      .badge
+    }
   }
 
   h1,
