Beta feature support

--- a/_layouts/acs-aem-commons_feature.html
+++ b/_layouts/acs-aem-commons_feature.html
@@ -11,6 +11,8 @@ layout: acs-aem-commons_default
                     <span class="new">New!</span>
                     {% elsif page.tags contains 'updated' %}
                     <span class="updated">Updated</span>
+                    {% elsif page.tags contains 'beta' %}
+                    <span class="beta">Beta</span>					
                     {% endif %}
                 </h1>
 
