--- a/_includes/shared/feature-card.html
+++ b/_includes/shared/feature-card.html
@@ -7,7 +7,8 @@
     <a class="feature-image-wrapper" href="{{ feature.url }}">
 
         {% if feature.tags contains 'new' %}<div class="new"></div>
-        {% elsif feature.tags contains 'updated' %}<div class="updated"></div>{% endif %}
+        {% elsif feature.tags contains 'updated' %}<div class="updated"></div>
+        {% elsif feature.tags contains 'beta' %}<div class="beta"></div>{% endif %}
 
         <img class="img-responsive"
              src="/{{ project }}{{ feature.thumbnail }}"/></a>
