--- a/lib/shared/feature-docs.less
+++ b/lib/shared/feature-docs.less
@@ -76,13 +76,25 @@
   .available-since {
 
   }
+
+  .section {
+    padding: 0 2em 1em 2em;
+    border: dotted 5px #f0f0f0;
+    margin-bottom: 2em;  
+
+    .clearfix;
+  
+    img {
+  	  float: right;
+  	  display: block;
+	  padding: 2em 0 1em 2em;	 
+	  max-width: 400px;
+  	  .clearfix;
+    }
+  }
 }
 
-.section {
-  padding: 0 2em 1em 2em;
-  border: dotted 5px #f0f0f0;
-  margin-bottom: 2em;  
-}
+
 
 /* Inline Code */
 code {
