ACS AEM Samples

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -1,9 +1,21 @@
 <section id="jumbotron">
-    <div class="unslider">
 
-        <ul>
-            {% include acs-aem-commons/slides/intro.html %}
-        </ul>
-
-    </div>
+    <div class="container">
+        <div class="wrapper image-on-top">
+            <img class="img-responsive" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
+            
+            <div class="message">
+                <div class="text">
+                    <h1>ACS AEM Commons</h1>
+                    <p class="lead">The wheel doesn't need reinventing</p>
+                </div>
+                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
+                    class="action-btn">Download the AEM Package</a>
+                <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
+            
+            </div>
+         
+        </div>
+    </div>  
+	
 </section>
