--- a/_includes/acs-aem-tools/jumbotron.html
+++ b/_includes/acs-aem-tools/jumbotron.html
@@ -1,12 +1,20 @@
 <section id="jumbotron">
-    <div class="unslider">
 
-        <ul>
-            {% include acs-aem-tools/slides/intro.html %}       
-            {% include acs-aem-tools/slides/explain-query.html %}     
-            {% include acs-aem-tools/slides/aem-fiddle.html %}
-            {% include acs-aem-tools/slides/query-editor.html %}
-        </ul>
+    <div class="container">
+        <div class="wrapper image-on-top">
+            <img class="img-responsive" src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
+            
+            <div class="message">
+                <div class="text">
+                    <h1>ACS AEM Tools</h1>
+                    <p class="lead">Your job is hard enough</p>
+                </div>
 
-    </div>
-</section>
+                <a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/releases/download/acs-aem-tools-{{ site.data.acs-aem-tools.version }}/acs-aem-tools-content-{{ site.data.acs-aem-tools.version }}.zip" class="action-btn">Download the latest release</a>
+            
+            </div>
+         
+        </div>
+    </div>  
+	
+</section> 
