--- a/_includes/shared/projects.html
+++ b/_includes/shared/projects.html
@@ -24,12 +24,12 @@
             </div>
 
             <div class="acs-aem-samples info-with-icon">
-                <div class="icon icon-acs-aem-samples"></div>
+                <a href="/acs-aem-samples" class="icon icon-acs-aem-samples"><a>
 
-                <h4>ACS AEM Samples <em>Coming Soon!</em></h4>
+                <h4><a href="/acs-aem-samples">ACS AEM Samples</a></h4>
 
                 <p>
-                    AEM/Adobe CQ collection of code samples, examples and templates
+                    Collection of AEM code samples, examples and templates
                 </p>
             </div>
 
