--- a/_layouts/acs-aem-samples_home.html
+++ b/_layouts/acs-aem-samples_home.html
@@ -1,5 +1,5 @@
 ---
-layout: acs-aem-commons_base
+layout: acs-aem-samples_base
 ---
 <div class="home">
     <div class="color-block">
@@ -7,15 +7,14 @@ layout: acs-aem-commons_base
             <nav class="navbar" role="navigation">
                 <div class="container">
 					{% include shared/quick-links.html %}					
-                    {% include acs-aem-commons/nav.html %}
+                    {% include acs-aem-samples/nav.html %}
                 </div>
             </nav>
         </header>
 
-        {% include acs-aem-commons/jumbotron.html %}
+        {% include acs-aem-samples/jumbotron.html %}
 
     </div>
-    {% include acs-aem-commons/news.html %}
 
     <div class="page content" role="main">
         {{ content }}        
