--- a/lib/acs-aem-tools/tools.less
+++ b/lib/acs-aem-tools/tools.less
@@ -4,7 +4,7 @@
 @color-dark: darken(@color, 25%);
 @color-light: lighten(@color, 25%);
 
-@secondary-color: red;
+@secondary-color: #06A608;
 
 @dark-bg-color: #2ee200;
 @dark-bg-color-text: white;
