--- a/lib/shared/core.less
+++ b/lib/shared/core.less
@@ -2,7 +2,7 @@
 @import "../vendor/prettify.less";
 @import "../vendor/syntax.less";
 @import "../vendor/bigfoot.less";
-@import "../vendor/unslider.less";
+/*@import "../vendor/unslider.less";*/
 @import "mixins.less";
 
 body {
