--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -5,6 +5,7 @@
 @import "feature-filters.less";
 @import "feature-cards.less";
 @import "feature-docs.less";
+@import "quick-links.less";
 
 .color-block {
   background: url('../images/colored-bg.jpg') no-repeat center top fixed;
