--- a/_includes/acs-aem-projects/jumbotron.html
+++ b/_includes/acs-aem-projects/jumbotron.html
@@ -1,11 +1,18 @@
 <section id="jumbotron">
-    <div class="unslider">
 
-        <ul>
-        	{% include acs-aem-projects/slides/intro.html %}
-        	{% include acs-aem-projects/slides/acs-aem-commons.html %}
-        	{% include acs-aem-projects/slides/acs-aem-tools.html %}
-        </ul>
+    <div class="container">
+        <div class="wrapper image-on-top">
+            <img class="slide-image" src="/assets/acs-aem-projects/slides/intro/package-icons.png"/>
+            
+            <div class="message">
+                <div class="text">
+                    <h1>ACS AEM Projects</h1>
+                    <p class="lead">We like what we do.</p>
+                </div>
+                <a href="#projects" class="action-btn">Checkout our Projects</a>
+            </div>
+         
+        </div>
+    </div>    
 
-    </div>
 </section>
