--- a/_includes/acs-aem-projects/nav.html
+++ b/_includes/acs-aem-projects/nav.html
@@ -2,4 +2,5 @@
     <li class="first"><a href="/index.html">Adobe Consulting Services</a></li>
     <li><a href="/acs-aem-commons">ACS AEM Commons</a></li>
     <li><a href="/acs-aem-tools">ACS AEM Tools</a></li>
+    <li><a href="/acs-aem-samples">ACS AEM Samples</a></li>	
 </ul>
