--- a/_layouts/acs-aem-commons_default.html
+++ b/_layouts/acs-aem-commons_default.html
@@ -5,6 +5,7 @@ layout: acs-aem-commons_base
     <header class="top">
         <nav class="navbar" role="navigation">
             <div class="container">
+				{% include shared/quick-links.html %}																		
                 {% include acs-aem-commons/nav.html %}
             </div>
         </nav>
