--- a/_layouts/acs-aem-projects_home.html
+++ b/_layouts/acs-aem-projects_home.html
@@ -6,6 +6,7 @@ layout: acs-aem-projects_base
 	    <header class="top">
 	        <nav class="navbar" role="navigation">
 	            <div class="container">
+					{% include shared/quick-links.html %}																							
 	                {% include acs-aem-projects/nav.html %}
 	            </div>
 	        </nav>
