--- a/_layouts/acs-aem-tools_default.html
+++ b/_layouts/acs-aem-tools_default.html
@@ -6,6 +6,7 @@ layout: acs-aem-tools_base
     <header class="top">
         <nav class="navbar" role="navigation">
             <div class="container">
+				{% include shared/quick-links.html %}																		
                 {% include acs-aem-tools/nav.html %}
             </div>
         </nav>
