--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -4,7 +4,7 @@
 @sm-height: 425px;
 @xs-height: auto;
 
-.jumbotron-slide-height {
+.jumbotron-height {
   height: @xs-height;
 
   @media (min-width: @screen-sm-min) {
@@ -22,53 +22,34 @@
 
 #jumbotron {
   color: white;
+	border-bottom: solid 1px @secondary-color;
+  
+  .wrapper {
+  	.make-row();
+    .jumbotron-height();
+    margin-bottom: 0;
+	text-align: center;
 
-  .slide {
+    .message {
+    	.make-md-column(12);        
+        padding: 0 2em;
+  		margin-bottom: 4em;  
+    	text-align: center;		
+	}
 
-    .wrapper {
-      .make-row();
-      margin-bottom: 0;
-
-      .jumbotron-slide-height();
-
-      .message {
-        .make-md-column(12);
-        
-        padding-left: 2em;
-        padding-right: 2em;
-      }
-    }
-
-    .wrapper.image-on-right,
-    .wrapper.image-on-left,
-    .wrapper.image-on-top,
-    .wrapper.image-on-bottom {
-      position: relative;
-
-      .slide-image {
-        .img-responsive();
-        display: none;
-        position: absolute;
-      }
-
-      .message {
-          margin-bottom: 4em;  
-          text-align: center;
-        }
-    }
+  	img {
+  		.img-responsive();
+		max-width: 90%;
+		margin: 0 auto;
+  	}
 
     /* Mobile; Always show image on the bottom */
     @media (min-width: @screen-sm-min) {
-      .wrapper.image-on-right,
-      .wrapper.image-on-left,
-      .wrapper.image-on-top,
-      .wrapper.image-on-bottom {
-        
-        .slide-image {
+		  
+        img {			
           display: block;
           bottom: -250px;
           height: 450px;
-          margin: 0 auto;
           left: 0;
           right: 0;
         }
@@ -76,120 +57,28 @@
         .message {
           .make-sm-column(12);
         }
-      }      
     }
 
     /* Desktop; Show top/bottom or side-by-side */
     @media (min-width: @screen-md-min) {
+		overflow: hidden;
 
-      .wrapper.image-on-right,
-      .wrapper.image-on-left {
-        .slide-image {
-          top: 1em;
-          margin: initial;
-        }
-
-        .message {
-          .make-md-column(5);
-          text-align: left;
-          margin-top: 125px;              
-        }
-      }   
-
-      .wrapper.image-on-left {
-        .slide-image {
-          margin: initial;
-          left: 2.5em;
-          right: inherit;
-        }
-
-        .message {
-          .make-md-column-offset(7);
-        }
+      img {
+        height: 550px;        
+        top: 1em;
+	  	margin-top: 190px;
       }
-
-      .wrapper.image-on-right {
-        .slide-image {
-          right: 2.5em;
-          left: inherit;
-        }
-      }
-
-      .wrapper.image-on-top,
-      .wrapper.image-on-bottom {
-        .slide-image {
-          height: 500px;
-        }
+	  
+      .message {
+		position: absolute;
+		top: 50px;
+		left: 50%;
+		margin-left: -50%;
       }
     }
 
+   
 
-    /* Large */
-    @media (min-width: @screen-lg-min) {
-
-      .wrapper.image-on-right,
-      .wrapper.image-on-left {
-        .slide-image {
-          top: 1em;
-          margin: initial;
-          width: auto;
-          height: auto;
-        }
-
-        .message {
-          .make-md-column(5);
-          text-align: left;
-          margin-top: 10em;              
-        }
-      }   
-
-      /* Image on Left */
-      .wrapper.image-on-left {
-        .slide-image {
-          left: 2.5em;
-          right: inherit;
-        }
-
-        .message {
-          .make-md-column-offset(7);
-        }
-      }
-
-
-      /* Image on Right */
-      .wrapper.image-on-right {
-        .slide-image {
-          right: 2.5em;
-          left: inherit;
-        }
-      }
-
-      /* Image on Top */
-      .wrapper.image-on-top {
-        .slide-image {
-          height: 365px;        
-          width: auto;
-          top: 1em;
-        }
-
-        .message {
-          margin-top: 375px;
-        }
-      }
-
-      /* Image on Bottom */
-      .wrapper.image-on-bottom {
-        .slide-image {
-          height: 600px;
-          height: auto;
-          bottom: -250px;
-        }
-
-        .message {
-          margin-top: 2em;
-        }
-      }
-    }
 
 
     .message {
