--- a/assets/acs-aem-projects/css/styles.css
+++ b/assets/acs-aem-projects/css/styles.css
@@ -7241,6 +7241,7 @@ header.top .navbar {
 header.top .navbar .nav {
   list-style: none;
   font-size: 1.25em;
+  display: inline;
 }
 header.top .navbar .nav li {
   display: block;
