--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -41,7 +41,7 @@ header.top {
     .nav {
       list-style: none;
       font-size: 1.25em;
-	  display: inline;
+	  display: inline-block;
 
       li {
 
