Lumberton message aiignment

--- a/assets/acs-aem-commons/css/styles.css
+++ b/assets/acs-aem-commons/css/styles.css
@@ -6744,8 +6744,8 @@ p a {
     margin-top: 190px;
   }
   #jumbotron .wrapper .message {
-    position: absolute;
-    top: 50px;
+    position: relative;
+    top: -750px;
     left: 50%;
     margin-left: -50%;
   }
