--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -70,16 +70,12 @@
       }
 	  
       .message {
-		position: absolute;
-		top: 50px;
+		position: relative;
+		top: -750px;
 		left: 50%;
 		margin-left: -50%;
       }
     }
-
-   
-
-
 
     .message {
       margin-top: 0;
