--- a/lib/acs-aem-projects/projects.less
+++ b/lib/acs-aem-projects/projects.less
@@ -6,7 +6,7 @@
 @color-dark: darken(@color, 25%);
 @color-light: lighten(@color, 25%);
 
-@secondary-color: red;
+@secondary-color: #333;
 
 @dark-bg-color: @color-light;
 @dark-bg-color-text: white;
