--- a/lib/acs-aem-samples/samples.less
+++ b/lib/acs-aem-samples/samples.less
@@ -4,12 +4,12 @@
 @color-dark: darken(@color, 25%);
 @color-light: lighten(@color, 25%);
 
-@secondary-color: #8859a7;
+@secondary-color: #E59BA8;
 
 @dark-bg-color: #441434;
 @dark-bg-color-text: darken(@color, 10%);
 @dark-bg-color-light: #8859a7;
-@dark-bg-color-dark: #8859a7;
+@dark-bg-color-dark: #A14E84;
 
 a {
   color: @color;
