--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -119,12 +119,13 @@
 
       color: white;
 
-      &:hover {
+      &:hover,
+	  &:focus,
+	  &:active {
         color: white;
       }
 
       &:active {
-        color: white;
         background-color: @dark-bg-color-dark;
       }
 
@@ -142,7 +143,9 @@
 
     color: white;
 
-    &:hover {
+    &:hover,
+	&:focus,
+	&:active {
       color: white;
     }
 
