adding compatibility page

--- a/lib/acs-aem-commons/commons.less
+++ b/lib/acs-aem-commons/commons.less
@@ -22,3 +22,8 @@ a {
 .color-block {
 	background-color: #882021;
 }
+
+table.data-table {
+    border-collapse: separate;
+    border-spacing: 20px;
+}
