--- a/_includes/acs-aem-commons/nav.html
+++ b/_includes/acs-aem-commons/nav.html
@@ -4,5 +4,6 @@
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons" target="_blank">GitHub Project</a></li>
     <li><a href="/acs-aem-commons/apidocs/" target="_blank">API Docs</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a></li>
+    <li><a href="/acs-aem-commons/pages/compatibility.html">Compatibility</a></li>
     <li class="acs-aem-projects"><a href="/"></a>
 </ul>
