--- a/lib/acs-aem-commons/commons.less
+++ b/lib/acs-aem-commons/commons.less
@@ -23,7 +23,28 @@ a {
 	background-color: #882021;
 }
 
-table.data-table {
-    border-collapse: separate;
-    border-spacing: 20px;
+table.data-table {	
+	margin: 0 auto 2em auto;
+	
+	thead {
+		border-bottom: solid 1px #ccc;
+		
+		tr {
+			&:hover {
+				background-color: transparent;
+			}
+		}
+	}
+	
+	th, td {
+		padding: 1em 1.5em;
+	}
+
+	tr {
+		border-bottom: solid 1px #eee;
+		
+		&:hover {
+			background-color: #f7f7f7;
+		}
+	}
 }
