ACS AEM Commons 2.0 - Jumbotron banner: ACS AEM Commons 2.0.0 requires AEM 6+

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -1,9 +1,9 @@
 <section id="jumbotron">
 
     <div class="container">
-        <div class="wrapper image-on-top">
+        <div class="wrapper image-on-top" style="position: relative">
             <img class="img-responsive" src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
-            
+
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
@@ -12,10 +12,10 @@
                 <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
                     class="action-btn">Download the AEM Package</a>
                 <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
-            
             </div>
-         
+
+            <div class="banner">ACS AEM Commons 2.0.0 requires AEM 6+</div>
         </div>
-    </div>  
-	
+    </div>
+
 </section>
