--- a/lib/shared/jumbotron.less
+++ b/lib/shared/jumbotron.less
@@ -8,22 +8,22 @@
   height: @xs-height;
 
   @media (min-width: @screen-sm-min) {
-    height: @sm-height;      
+    height: @sm-height;
   }
-  
+
   @media (min-width: @screen-md-min) {
-    height: @md-height;      
+    height: @md-height;
   }
 
   @media (min-width: @screen-lg-min) {
-    height: @lg-height;      
-  }  
+    height: @lg-height;
+  }
 }
 
 #jumbotron {
   color: white;
 	border-bottom: solid 1px @secondary-color;
-  
+
   .wrapper {
   	.make-row();
     .jumbotron-height();
@@ -31,10 +31,10 @@
 	text-align: center;
 
     .message {
-    	.make-md-column(12);        
+    	.make-md-column(12);
         padding: 0 2em;
-  		margin-bottom: 4em;  
-    	text-align: center;		
+  		margin-bottom: 4em;
+    	text-align: center;
 	}
 
   	img {
@@ -45,8 +45,8 @@
 
     /* Mobile; Always show image on the bottom */
     @media (min-width: @screen-sm-min) {
-		  
-        img {			
+
+        img {
           display: block;
           bottom: -250px;
           height: 450px;
@@ -64,11 +64,11 @@
 		overflow: hidden;
 
       img {
-        height: 550px;        
+        height: 550px;
         top: 1em;
 	  	margin-top: 190px;
       }
-	  
+
       .message {
 		position: relative;
 		top: -750px;
@@ -104,7 +104,7 @@
         }
       }
     }
-    
+
     .stacked .message .text {
       text-align: center;
     }
@@ -160,5 +160,48 @@
     -moz-box-shadow:    0px 1px 0px 1px rgba(0, 0, 1px, 0.25);
     -webkit-box-shadow: 0px 1px 0px 1px rgba(0, 0, 1px, 0.25);
     box-shadow:         0px 1px 0px 1px rgba(0, 0, 1px, 0.25);
-  }  
+  }
+
+
+  /* Banner */
+  /* ACS AEM Commons 2.0 Jumbotron Banner */
+
+  .banner {
+      background-color: #FFDF00;
+      color: #222;
+      padding: .5em 1em;
+      box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
+      -ms-transform: rotate(-7deg);
+      -webkit-transform: rotate(-7deg);
+      transform: rotate(-7deg);
+      position: absolute;
+
+      left: 50%;
+      top: 150px;
+      margin-left: -50%;
+      width: 100%;
+      font-size: 1.5em;
+
+      @media (min-width: @screen-sm-min) {
+        font-size: 1.75em;
+        top: 125px;
+        margin-left: -325px;
+        width: 650px;
+      }
+
+      @media (min-width: @screen-md-min) {
+        font-size: 1.75em;
+        top: 310px;
+        margin-left: -325px;
+        width: 650px;
+      }
+
+      @media (min-width: @screen-lg-min) {
+        font-size: 1.75em;
+        top: 310px;
+        margin-left: -325px;
+        width: 650px;
+      }
+
+  }
 }
