switching to DTM

--- a/_layouts/acs-aem-tools_base.html
+++ b/_layouts/acs-aem-tools_base.html
@@ -10,5 +10,6 @@
     {% include shared/footer.html %}
 
     {% include shared/footer-libs.html %}
+    {% include shared/analytics-bottom.html %}
     </body>
 </html>
