--- a/_includes/shared/analytics.html
+++ b/_includes/shared/analytics.html
@@ -1,9 +1,1 @@
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-40089470-2', 'adobe-consulting-services.github.io');
-    ga('send', 'pageview');
-</script>
+<script src="//assets.adobedtm.com/e4001509aa5ac4fca69af0f9811360fa4cf3c95c/satelliteLib-b1b8eeb1ebdebfb9e428b71080d9aa418ebc41ea.js"></script>
