--- a/_layouts/acs-aem-commons_default.html
+++ b/_layouts/acs-aem-commons_default.html
@@ -1,6 +1,10 @@
 ---
 layout: acs-aem-commons_base
 ---
+<script>
+    digitalData.page.pageInfo.category.pageType = "Information";
+    digitalData.page.pageInfo.category.projectName = "ACS AEM Commons";
+</script>
 <div class="color-block">
     <header class="top">
         <nav class="navbar" role="navigation">
