--- a/_layouts/acs-aem-samples_home.html
+++ b/_layouts/acs-aem-samples_home.html
@@ -1,6 +1,10 @@
 ---
 layout: acs-aem-samples_base
 ---
+<script>
+    digitalData.page.pageInfo.category.pageType = "Home";
+    digitalData.page.pageInfo.category.projectName = "ACS AEM Samples";
+</script>
 <div class="home">
     <div class="color-block">
         <header class="top">
