--- a/_layouts/acs-aem-tools_default.html
+++ b/_layouts/acs-aem-tools_default.html
@@ -1,12 +1,15 @@
 ---
 layout: acs-aem-tools_base
 ---
-
+<script>
+    digitalData.page.pageInfo.category.pageType = "Information";
+    digitalData.page.pageInfo.category.projectName = "ACS AEM Tools";
+</script>
 <div class="color-block">
     <header class="top">
         <nav class="navbar" role="navigation">
             <div class="container">
-				{% include shared/quick-links.html %}																		
+                {% include shared/quick-links.html %}
                 {% include acs-aem-tools/nav.html %}
             </div>
         </nav>
@@ -14,9 +17,9 @@ layout: acs-aem-tools_base
 </div>
 
 <div class="content page" role="main">
-	<div class="container">
-		{{ content }}
-	</div>
+    <div class="container">
+        {{ content }}
+    </div>
 </div>
 
 
