--- a/_layouts/acs-aem-tools_feature.html
+++ b/_layouts/acs-aem-tools_feature.html
@@ -1,6 +1,10 @@
 ---
 layout: acs-aem-tools_default
 ---
+<script>
+    digitalData.page.pageInfo.category.pageType = "Feature";
+    digitalData.page.pageInfo.category.projectName = "ACS AEM Tools";
+</script>
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
         <section class="feature-doc">
