adding chat links to nav

--- a/_includes/acs-aem-tools/nav.html
+++ b/_includes/acs-aem-tools/nav.html
@@ -3,5 +3,6 @@
     <li><a href="/acs-aem-tools/#features">Features</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools" target="_blank">GitHub Project</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a></li>
+    <li><a href="https://gitter.im/Adobe-Consulting-Services/acs-aem-tools" target="_blank">Chat</a></li>
     <li class="acs-aem-projects"><a href="/"></a>    
 </ul>
