--- a/_includes/shared/head.html
+++ b/_includes/shared/head.html
@@ -37,7 +37,8 @@
                 category : {
                 }
             }
-        }
+        },
+        event : []
     };
     </script>
     
