ACS AEM Commons 2.4.0/3.0.0 release notes

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -14,7 +14,7 @@
                 <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
             </div>
 
-            <div class="banner">ACS AEM Commons 2.0.0 requires AEM 6+</div>
+            <div class="banner">For AEM 6.1 use 2.x  &mdash; For AEM 6.2 use 3.x</div>
         </div>
     </div>
 
