adding trademark language

--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -2,7 +2,8 @@
     <div class="container">
         <a href="/pages/license.html">License</a>
         <span class="right">
-                &copy; Adobe Systems Incorporated. All Rights Reserved
+                &copy; Adobe Systems Incorporated. All Rights Reserved<br/>
+                Adobe is either a registered trademark or trademark of Adobe Systems Incorporated in the United States and/or other countries
         </span>
 
         <span style="float:right;">
