updated trademark notice based on Advanced Asset Components requirements

--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -3,7 +3,7 @@
         <a href="/pages/license.html">License</a>
         <span class="right">
                 &copy; Adobe Systems Incorporated. All Rights Reserved<br/>
-                Adobe is either a registered trademark or trademark of Adobe Systems Incorporated in the United States and/or other countries
+                <a href="/pages/notice.html">Trademark Notice</a>
         </span>
 
         <span style="float:right;">
