#collections - Move from _posts to _collections

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -11,10 +11,9 @@
                 </div>
                 <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
                     class="action-btn">Download the AEM Package</a>
-                <a href="/acs-aem-commons/#features" class="action-btn">Checkout the Features</a>
             </div>
 
-            <div class="banner">For AEM 6.1 use 2.x  &mdash; For AEM 6.2 use 3.x</div>
+            <div class="banner">For AEM 6.2 &amp; 6.3 use 3.x.x</div>
         </div>
     </div>
 
