--- a/_layouts/acs-aem-projects_home.html
+++ b/_layouts/acs-aem-projects_home.html
@@ -6,7 +6,7 @@ layout: acs-aem-projects_base
     digitalData.page.pageInfo.category.projectName = "Generic";
 </script>
 
-<div class="home">
+<div class="home acs-aem-projects">
     <div class="color-block">
         <header class="top">
             <nav class="navbar" role="navigation">
