--- a/_includes/acs-aem-projects/jumbotron.html
+++ b/_includes/acs-aem-projects/jumbotron.html
@@ -1,33 +1,21 @@
 <section id="jumbotron">
-
     <div class="container">
         <div class="wrapper image-on-top">
-            <img class="slide-image" src="/assets/acs-aem-projects/slides/intro/package-icons.png"/>
-            
+
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Projects</h1>
                     <p class="lead">The trifecta.</p>
                 </div>
+            </div>
 
-                <div class="projects-wrapper">
-                    <a href="/acs-aem-samples" title="ACS AEM Samples">
-                        <img src="/assets/acs-aem-samples/images/giant-package-icon.png"/>
-                    </a>
-                    <a href="/acs-aem-commons" title="ACS AEM Commons">
-                        <img src="/assets/acs-aem-commons/images/giant-package-icon.png"/>
-                    </a>
-                    <a href="/acs-aem-tools" title="ACS AEM Tools">
-                        <img src="/assets/acs-aem-tools/images/giant-package-icon.png"/>
-                    </a>
-                </div>
+            <div class="clearfix"></div>
+
+            <div class="projects-wrapper">
+                <a href="/acs-aem-samples" title="ACS AEM Samples" class="left"><img src="/assets/acs-aem-samples/images/giant-package-icon.png"/></a>
+                <a href="/acs-aem-commons" title="ACS AEM Commons" class="center"><img src="/assets/acs-aem-commons/images/giant-package-icon.png"/></a>
+                <a href="/acs-aem-tools" title="ACS AEM Tools" class="right"><img src="/assets/acs-aem-tools/images/giant-package-icon.png"/></a>
             </div>
         </div>
-    </div>    
-
+    </div>
 </section>
-
-<script>
-
-
-</script>
