ACS Commons v3.10.0 delay

--- a/_includes/shared/projects.html
+++ b/_includes/shared/projects.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="acs-aem-samples info-with-icon">
-                <a href="/acs-aem-samples" class="icon icon-acs-aem-samples"><a>
+                <a href="/acs-aem-samples" class="icon icon-acs-aem-samples"></a>
 
                 <h4><a href="/acs-aem-samples">ACS AEM Samples</a></h4>
 
@@ -32,7 +32,6 @@
                     Collection of AEM code samples, examples and templates
                 </p>
             </div>
-
         </div>
     </div>
 </section>
