--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -20,6 +20,7 @@ layout: acs-aem-commons_base
 
     </div>
     {% include acs-aem-commons/news.html %}
+    {% include acs-aem-commons/alert.html %}
 
     <div class="page content" role="main">
         {{ content }}        
